[package]
name = "sc-rpc-server"
version = "11.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Substrate RPC servers."
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
forwarded-header-value = "0.1.1"
futures = "0.3.30"
governor = "0.6.0"
http = "1.1"
http-body-util = "0.1.2"
ip_network = "0.4.1"
jsonrpsee = { version = "0.23.2", features = ["server"] }
log = "0.4.17"
serde = "1.0.197"
serde_json = "1.0.111"
tokio = { version = "1.22.0", features = ["parking_lot"] }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus" }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors"] }

# Dependencies outside the polkadot-sdk workspace
# which requires hyper v1
hyper = "1.3"
